feat(backend): 상품 삭제 시 R2 파일도 함께 삭제하도록 수정 (#5)
- 이전 문제: 지금 `productService.deleteProduct` 메서드는 DB에서만 `Product`와 `ProductImage`를 삭제함. Cloudflare R2에는 실제 이미지 파일이 그대로 남아 "고아 파일(Orphan File)"이 되어 스토리지 용량을 불필요하게 차지함.
- 해결 방법: 상품을 삭제하기 전에, 해당 상품의 모든 이미지 URL을 가져와 R2에서 먼저 삭제해주는 로직 구현.